# supsrc

./: .gitguardian.yaml  .gitignore  .gitleaks.toml  .trufflehog-exclude-paths.txt  2025-08-09-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FOUNDATION_INTEGRATION_STATUS.md  GEMINI.md  IMPLEMENTATION_PLAN_SUPSRC_DIR.md  IMPORT_FIX_SUMMARY.md  Makefile  Makefile.backup.20251110  README.md  SECURITY_SCAN_REPORT.md  SESSION_SUMMARY.md  TODO.md  debug_status.py  demo_hot_reload.py  env.ps1  env.sh  main.py  mkdocs.yml  pyproject.toml  supsrc.conf  test_atomic_save_fix.py  test_changes.txt  test_debug_atomic.py  test_event_logging.py  test_event_stream.sh  test_event_trigger.txt  test_file_change.txt  test_fixes.txt  test_foundation_debug.py  test_monitoring.txt  test_monitoring_fixed.txt  test_pause_fixes.py  test_real_atomic_pattern.py  (+5 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  pytest.yaml  release.yml
.security-reports/: bandit-summary.txt  gitleaks.json  pip-audit.json  safety.json  security.json  security_issues.txt  security_summary.txt  semgrep.json
.supsrc/logs/: events.jsonl
docs/: ARCHITECTURAL_ANALYSIS_2025-11-13.md  ARCHITECTURE_RESPONSIVE_UI.md  GEMINI.md  MCP_INTEGRATION_DESIGN.md  PYVIDER_RPC_PROTOCOL_DESIGN.md  TIMEMACHINE_HANDOFF_PLAN.md  TIMEMACHINE_SYSTEM_ARCHITECTURE.md  TODO.md  configuration.md  headless-event-stream-plan.md  index.md  quality-integration-plan.md  tui-mockup.md
docs/api/: index.md
docs/getting-started/: installation.md
docs/scraps/: log-format.txt
docs/stale/: ATOMIC_SAVE_DETECTION_REPORT.md  SESSION_SUMMARY.md  VSCODE_ATOMIC_SAVE_FIX_PLAN.md  debug_status.py  test_temp_emission.py
examples/: README.md  debug_monitor.sh  setup_examples.sh  supsrc.conf  supsrc_test.conf  test_tui.sh
keys/: flavor-private.key  flavor-public.key
src/: bfiles-20250930-212933.txt
src/supsrc/: __init__.py  _version.py  config.py  constants.py  demo_util.py  example_helper.py  exceptions.py  logging.py  plugins.py  protocols.py  rules.py  state.py  timing_test.py  types.py
src/supsrc/cli/: __init__.py  circuit_breaker_cmds.py  config_cmds.py  main.py  sui_cmds.py  tail_cmds.py  tui_cmds.py  utils.py  watch_cmds.py
src/supsrc/config/: __init__.py  defaults.py  loader.py  models.py
src/supsrc/engines/: __init__.py
src/supsrc/engines/git/: __init__.py  auth.py  base.py  commit.py  credentials.py  errors.py  (+8 more)
src/supsrc/events/: __init__.py  atomic_detection.py  base.py  buffer.py  buffer_events.py  collector.py  defaults.py  feed.py  feed_table.py  json_logger.py  monitor.py  processor.py  protocol.py  system.py  timer.py
src/supsrc/llm/: __init__.py  prompts.py
src/supsrc/monitor/: __init__.py  events.py  handler.py  service.py
src/supsrc/notifications/: __init__.py  service.py
src/supsrc/output/: __init__.py  console_formatter.py  emoji_map.py
src/supsrc/runtime/: __init__.py  action_handler.py  event_processor.py  monitoring_coordinator.py  orchestrator.py  repository_manager.py  status_manager.py  tui_interface.py
src/supsrc/services/: __init__.py  circuit_breaker.py
src/supsrc/state/: __init__.py  control.py  file.py  manager.py  models.py  monitor.py  runtime.py
src/supsrc/telemetry/: __init__.py  eventset.py
src/supsrc/timemachine/: __init__.py  config.py  exceptions.py
src/supsrc/tui/: __init__.py  actions.py  alt_app.py  app.py  base_app.py  logging_handler.py  messages.py  utils.py
src/supsrc/utils/: directories.py  streams.py
supsrc/utils/: streams.py
tests/: __init__.py  conftest.py  test_hot_reload.py
tests/cli/: test_console_watch_output.py  test_watch_console_output.py
tests/e2e/: __init__.py  test_cli_integration.py  test_real_config.py
tests/features/: cli_basics.feature  commit_message_templates.feature  configuration.feature  configuration_defaults.feature  empty_commit_prevention.feature  file_directory_operations.feature  git_commit_conflicts.feature  git_push_errors.feature  gitignore_integration.feature  graceful_shutdown.feature  ignore_dot_git.feature  logging_levels.feature  many_repositories.feature  monitoring.feature  path_handling.feature  rapid_saves_debouncing.feature
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  config_testing.py
tests/integration/: test_atomic_file_operations.py  test_circuit_breaker_integration.py  test_console_verbose_output.py  test_monitoring.py  test_timer_debounce_integration.py  test_tui_simple_workflows.py  test_tui_workflows.py  test_vscode_atomic_save.py
tests/unit/: conftest.py  test_action_handler.py  test_bottom_row_selection_bug.py  test_circuit_breaker.py  test_cli.py  test_cli_refactor.py  test_cli_watch_repl.py  test_config.py  test_cty_models.py  test_directories.py  test_dual_logging.py  test_event_buffer.py  test_event_buffer_core.py  test_event_buffer_grouping.py  test_event_buffer_patterns.py  test_event_feed_table.py  test_event_processor.py  test_event_processor_modes.py  test_event_processor_timer_debounce.py  test_git_engine.py  test_monitor.py  test_move_rename_display.py  test_orchestrator.py  test_orchestrator_features.py  test_rules.py  test_state.py  test_state_management.py  test_status_manager.py  test_sui_command.py  test_tail_command.py  test_timemachine_config.py  test_tui.py  test_tui_accessibility.py  test_tui_app_core.py  test_tui_error_handling.py  test_tui_integration.py  test_tui_pilot.py  test_tui_snapshots.py  test_tui_timer_manager.py  test_watch_command.py
tests/unit/events/: test_base.py  test_collector.py  test_feed.py  test_git_events.py  test_git_mock_events.py  test_monitor_events.py  test_protocol.py  test_system_events.py
tests/unit/output/: __init__.py  test_console_formatter.py  test_console_formatter_events.py  test_console_formatter_init.py  test_console_formatter_output.py  test_console_formatter_utilities.py  test_console_formatter_verbose.py  test_verbose_formats.py
tests/unit/workflow/: test_executor.py  test_git_operations.py  test_llm_utils.py  test_steps.py  test_test_runner.py
workenv/: env.sh
(+47 files in other folders)
