[project]
name = "supsrc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=24.1.3",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "hatch>=1.14.1",
    "hypothesis>=6.131.9",
    "pyrefly>=0.13.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
]
