#
# pyproject.toml
#

[project]
name = "supsrc"
dynamic = ["version"]
description = "Automated Git commit/push utility based on filesystem events and rules."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Tim Perkins", email = "code@tim.life" },
]
maintainers = [
    { name = "provide.io", email = "code@provide.io" },
]
keywords = ["git", "automation", "watchdog", "developer-tools", "vcs", "backup", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha", # Adjust as appropriate
    "Environment :: Console",
    "Environment :: Console :: Curses", # For TUI
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# --- Core Dependencies ---
dependencies = [
    "provide-foundation[all]",
    "cattrs>=24.1.3",
    "pygit2>=1.18.0",
    "watchdog>=6.0.0",
    "pathspec>=0.12.1", # Required for .gitignore handling
    "sshconf>=0.2.7",
    "rich>=14.0.0",
    "aioconsole>=0.8.1",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://foundry.provide.io/supsrc/"
Documentation = "https://foundry.provide.io/supsrc/"
Repository = "https://github.com/provide-io/supsrc"
Issues = "https://github.com/provide-io/supsrc/issues"

[dependency-groups]
dev = [
    "provide-testkit[standard,advanced-testing,build,utils]",
    "supsrc[tui,llm]",
]
docs = [
    "provide-testkit[docs]",
]

# --- Optional Features (Extras) ---
[project.optional-dependencies]
tui = [
    "textual>=0.70.0", # Use a recent stable version
]
llm = [
    "google-genai>=0.5.0",
    "ollama>=0.2.0",
]


[project.scripts]
supsrc = "supsrc.cli.main:cli"

# --------------------------------------------------------------------------- #
# Build System Configuration (Hatch)                                          #
# --------------------------------------------------------------------------- #
[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
supsrc = ["py.typed"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}


# --------------------------------------------------------------------------- #
# Ruff Linter/Formatter Configuration                                         #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 111
target-version = "py311" # Match requires-python lower bound

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "BLE", "C90", "PIE", "PLR", "S", "SIM", "PTH", "RUF"]
ignore = [
    "ANN001",   # missing-type-function-argument (legacy code)
    "ANN002",   # missing-type-args (legacy code)
    "ANN003",   # missing-type-kwargs (legacy code)
    "ANN201",   # missing-return-type-undocumented-public-function (legacy code)
    "ANN202",   # missing-return-type-private-function (legacy code)
    "ANN204",   # missing-return-type-special-method (legacy code)
    "ANN401",   # any-type (too restrictive)
    "BLE001",   # blind-except (too restrictive for cleanup patterns)
    "B008",     # function-call-in-default-argument (Click uses this pattern)
    "C901",     # too-complex (refactor later)
    "E501",     # line-too-long (handled by formatter)
    "S101",     # assert (valid in tests)
    "S104",     # binding-to-all-interfaces (intentional for servers)
    "S105",     # hardcoded-password-string (false positive for variable names)
    "S108",     # hardcoded-temp-file (/tmp is fine for our use cases)
    "S110",     # try-except-pass (legitimate for cleanup)
    "S310",     # suspicious-url-open-for-protocol (URLs are controlled)
    "S311",     # random (not for crypto)
    "S603",     # subprocess-without-shell-equals-true (trusted input)
    "S607",     # start-process-with-partial-path (trusted executables)
    "PIE810",   # single-starts-ends-with (style preference)
    "PLR0911",  # too-many-return-statements (refactor later)
    "PLR0912",  # too-many-branches (refactor later)
    "PLR0913",  # too-many-arguments (common in config classes)
    "PLR0915",  # too-many-statements (refactor later)
    "PLR2004",  # magic-value-comparison (too noisy)
    "PTH123",   # builtin-open (legacy code)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR0124"]

[tool.ruff.lint.isort]
known-first-party = ["supsrc", "tests"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# --------------------------------------------------------------------------- #
# Mypy Configuration                                                          #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["structlog.*", "pytest.*", "pygit2.*", "watchdog.*", "sshconf.*", "aioconsole.*"]
ignore_missing_imports = true


# --------------------------------------------------------------------------- #
# Pyre Configuration                                                          #
# --------------------------------------------------------------------------- #
[tool.pyre]
# Location of source code Pyre should analyze
source_directories = ["src", "tests"]
# Location of external libraries or stubs
# search_path = ["stubs", "path/to/library"] # Add paths if needed
# Can specify python version if different from environment
# python_version = "3.11"
# Ignore specific error codes if necessary
# errors = [
#     {"code": 16, "paths": ["path/to/specific_file.py"]}, # Example: Ignore Undefined attribute
# ]
# Optional: Specify binary location if not in PATH
# binary = "/path/to/pyre.bin"
# Optional: Specify typeshed location if custom needed
# typeshed = "/path/to/typeshed"


# --------------------------------------------------------------------------- #
# Pytest Configuration                                                        #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
minversion = "7.0"
addopts = "-ra -q --strict-markers --import-mode=importlib"
# Parallel execution: pytest -n <workers> (range: 2-16, recommend: CPU cores or 8, max: 16 to avoid xdist hang)
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::UserWarning:provide.foundation.*", # Allow Foundation testing helpers warnings
    "ignore::DeprecationWarning:pygit2.*:", # Ignore specific deprecations if noisy
    "ignore:Module already imported so cannot be rewritten.*:pytest.PytestAssertRewriteWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "tui: marks tests related to the TUI feature",
]
asyncio_mode = "auto" # Required for pytest-asyncio
asyncio_default_fixture_loop_scope = "function" # Prevent deprecation warning


# --------------------------------------------------------------------------- #
# Coverage Configuration                                                      #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["src/supsrc"]
branch = true
parallel = true
# Omit files that are hard to test or not meant to be covered
omit = [
    "src/supsrc/__main__.py", # If you add one
    "src/supsrc/tui/*",     # Example: Omit TUI until tested
    "src/supsrc/_vendor/*", # Example: Exclude vendored code
    "*/__init__.py",        # Often empty or just imports
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    # Standard typing/protocol boilerplate
    "if TYPE_CHECKING:",
    "\\\\.\\.\\.\\.", # Ellipsis placeholder
    "@(abc\\.)?abstractmethod",
    "pass",
    # Common debugging/error handling
    "raise NotImplementedError",
    "raise AssertionError",
    # Main guard
    "if __name__ == .__main__.:",
    # Type checking blocks
    "except ImportError:",
]

[tool.coverage.html]
directory = "coverage_html_report"
title = "Supsrc Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"


# --------------------------------------------------------------------------- #
# Bandit Security Configuration                                               #
# --------------------------------------------------------------------------- #
[tool.bandit]
exclude_dirs = [".venv", "tests", "workenv"]
